--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "date-fns": "^2.26.0",
     "firebase": "^9.5.0",
     "framer-motion": "^4.1.17",
     "moment": "^2.29.1",
